Switch primary domain to alpik-kyiv.com

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="/img/logo1.png" type="image/png">
     <link rel="apple-touch-icon" href="/img/logo1.png">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/">
+<link rel="canonical" href="https://alpik-kyiv.com/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/">
 <!-- i18n-seo:end -->
 </head>
 
