--- a/en/about.html
+++ b/en/about.html
@@ -6,10 +6,10 @@
     <title>About — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/about/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/about/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/about/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/about/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/about/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/about/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/about/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/about/">
 <!-- i18n-seo:end -->
 </head>
 <body>
