--- a/en/contacts.html
+++ b/en/contacts.html
@@ -6,10 +6,10 @@
     <title>Contacts — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/contacts/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/contacts/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/contacts/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/contacts/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/contacts/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/contacts/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/contacts/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/contacts/">
 <!-- i18n-seo:end -->
 </head>
 <body>
