--- a/en/montage.html
+++ b/en/montage.html
@@ -7,10 +7,10 @@
     <title>Installation works — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/montage/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/montage/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/montage/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/montage/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/montage/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/montage/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/montage/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/montage/">
 <!-- i18n-seo:end -->
 </head>
 
