--- a/en/our-projects.html
+++ b/en/our-projects.html
@@ -6,10 +6,10 @@
     <title>Projects — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/our-projects/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/our-projects/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/our-projects/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/our-projects/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/our-projects/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/our-projects/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/our-projects/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/our-projects/">
 <!-- i18n-seo:end -->
 </head>
 <body>
