--- a/en/service-06.html
+++ b/en/service-06.html
@@ -7,10 +7,10 @@
     <title>Roof repair & painting — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-06/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-06/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-06/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-06/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/service-06/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-06/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-06/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-06/">
 <!-- i18n-seo:end -->
 </head>
 
