--- a/en/service-08.html
+++ b/en/service-08.html
@@ -7,10 +7,10 @@
     <title>Steel structure painting & sandblasting — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-08/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-08/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-08/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-08/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/service-08/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-08/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-08/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-08/">
 <!-- i18n-seo:end -->
 </head>
 
