--- a/en/service-17.html
+++ b/en/service-17.html
@@ -7,10 +7,10 @@
     <title>Power cable installation — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-17/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-17/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-17/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-17/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/service-17/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-17/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-17/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-17/">
 <!-- i18n-seo:end -->
 </head>
 
