--- a/en/solar-panels.html
+++ b/en/solar-panels.html
@@ -7,10 +7,10 @@
     <title>Solar panel installation — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/solar-panels/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/solar-panels/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/solar-panels/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/solar-panels/">
+<link rel="canonical" href="https://alpik-kyiv.com/en/solar-panels/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/solar-panels/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/solar-panels/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/solar-panels/">
 <!-- i18n-seo:end -->
 </head>
 
