--- a/our-services.html
+++ b/our-services.html
@@ -6,10 +6,10 @@
     <title>Наші послуги — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/our-services/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/our-services/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/our-services/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/our-services/">
+<link rel="canonical" href="https://alpik-kyiv.com/our-services/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/our-services/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/our-services/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/our-services/">
 <!-- i18n-seo:end -->
 </head>
 <body>
