--- a/repair.html
+++ b/repair.html
@@ -7,10 +7,10 @@
     <title>Ремонтні роботи — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/repair/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/repair/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/repair/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/repair/">
+<link rel="canonical" href="https://alpik-kyiv.com/repair/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/repair/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/repair/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/repair/">
 <!-- i18n-seo:end -->
 </head>
 
