--- a/service-02.html
+++ b/service-02.html
@@ -7,10 +7,10 @@
     <title>Ремонт і модернізація димових труб — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-02/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-02/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-02/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-02/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-02/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-02/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-02/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-02/">
 <!-- i18n-seo:end -->
 </head>
 
