--- a/service-04.html
+++ b/service-04.html
@@ -7,10 +7,10 @@
     <title>Демонтаж димових труб та металоконструкцій — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-04/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-04/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-04/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-04/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-04/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-04/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-04/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-04/">
 <!-- i18n-seo:end -->
 </head>
 
