--- a/service-05.html
+++ b/service-05.html
@@ -7,10 +7,10 @@
     <title>Комплексний ремонт елеваторів; очищення та ремонт силосів — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-05/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-05/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-05/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-05/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-05/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-05/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-05/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-05/">
 <!-- i18n-seo:end -->
 </head>
 
