--- a/service-13.html
+++ b/service-13.html
@@ -7,10 +7,10 @@
     <title>Монтаж рекламних конструкцій, навішування банерів — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-13/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-13/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-13/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-13/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-13/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-13/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-13/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-13/">
 <!-- i18n-seo:end -->
 </head>
 
