--- a/service-14.html
+++ b/service-14.html
@@ -7,10 +7,10 @@
     <title>Очищення снігу, бурульок і наледі з покрівлі та конструкцій — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-14/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-14/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-14/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-14/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-14/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-14/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-14/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-14/">
 <!-- i18n-seo:end -->
 </head>
 
