--- a/service-15.html
+++ b/service-15.html
@@ -7,10 +7,10 @@
     <title>Миття фасадів будівель, вікон та промислових цехів — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-15/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-15/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-15/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-15/">
+<link rel="canonical" href="https://alpik-kyiv.com/service-15/">
+<link rel="alternate" hreflang="uk" href="https://alpik-kyiv.com/service-15/">
+<link rel="alternate" hreflang="en" href="https://alpik-kyiv.com/en/service-15/">
+<link rel="alternate" hreflang="x-default" href="https://alpik-kyiv.com/service-15/">
 <!-- i18n-seo:end -->
 </head>
 
